# tinbaccc

./: CMakeLists.txt  README.md
include/asm_arm/: asm_ops.h  builder.h  instructions.h  optimization.h  registers.h
include/ast/: ast.h  symtab.h  validation.h
include/ir/: allop.inc  ir.h  loop.h  passes.h  vectorization.h
include/ir/passes/: gvn_gcm.h
include/parser/: driver.h  tcc-sy-driver.hh
prebuilt_parser/: location.hh  tcc-sy-parser.cpp  tcc-sy-parser.hh  tcc-sy-scanner.cpp  tcc-sy-scanner.hh
src/: main.cpp
src/asm_arm/: builder.cpp  function_fixup.cpp  instructions.cpp  optimization.cpp  print.cpp  registers.cpp
src/ast/: ast.cpp  codegen.cpp  print.cpp  symtab.cpp  validation.cpp
src/ir/: codegen.cpp  codegen_simd.cpp  ir.cpp  ir_simd.cpp  print.cpp
src/ir/passes/: adce.cpp  basicblock_ops.cpp  dce.cpp  dominator.cpp  eliminate_load.cpp  fixups.cpp  function_ops.cpp  gvn.cpp  gvn_gcm.cpp  loop.cpp  loop_detect.cpp  loop_unrolling.cpp  loop_val.cpp  rpo.cpp  side_effect.cpp  strength_reduction.cpp  tail_call_elimination.cpp  vectorization.cpp
src/ir/src/asm_arm/: optimization.cpp
src/ir/src/ast/: ast.cpp  print.cpp
src/ir/src/ir/passes/: fixups.cpp  gvn_gcm.cpp  rpo.cpp
src/ir/src/parser/: scanner.ll
src/parser/: driver.cpp  parser.yy  scanner.ll  tcc-sy-driver.cpp
